implement embedding model handler , BL and repository
